plugins {
    id 'dev.architectury.loom' version '1.11-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }

    repositories {
        // Add repositories to retrieve artifacts from in here.
        // You should only use this when depending on other mods because
        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
        // for more information about repositories.
        maven { url = "https://maven.neoforged.net/releases/" }
        maven { url = "https://maven.terraformersmc.com/" }
        maven { url = "https://cursemaven.com" }
        maven { url = "https://api.modrinth.com/maven" }
        maven { url = 'https://jitpack.io' }
        maven { url = 'https://maven.nucleoid.xyz/' }
        maven { url = "https://maven.blamejared.com/" }
        maven { url = "https://modmaven.dev" }
        maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" }
        maven { url = "https://maven.createmod.net" }
        maven { url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
        maven { url = 'https://maven.minecraftforge.net/' }
        flatDir { dirs '../mappings-patch' }
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.layered {
            it.mappings("net.fabricmc:yarn:$rootProject.yarn_mappings:v2")
            it.mappings("dev.architectury:yarn-mappings-patch-neoforge:$rootProject.yarn_mappings_patch_neoforge_version")
            it.mappings("com.iafenvoy:yarn-mappings-patch-neoforge-mods:1.0")
        }
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    // Configure Maven publishing.
    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            // Add repositories to publish to here.
            // Notice: This block does NOT have the same function as the block in the top level.
            // The repositories here will be used for publishing your artifact, not for
            // retrieving dependencies.
        }
    }
}

tasks.register('copyJars', Copy) {
    from('fabric/build/libs') {
        include "${rootProject.archives_name}-fabric-${rootProject.mod_version}.jar"
        rename { String fileName ->
            "${rootProject.archives_name}-${rootProject.mod_version}-${rootProject.minecraft_version}-fabric.jar"
        }
    }
    from('neoforge/build/libs') {
        include "${rootProject.archives_name}-neoforge-${rootProject.mod_version}.jar"
        rename { String fileName ->
            "${rootProject.archives_name}-${rootProject.mod_version}-${rootProject.minecraft_version}-neoforge.jar"
        }
    }
    into 'build/libs'
}
